test/compilable/imports/test7236a.d
module imports.test7236a;

class C1
{
protected:
    void pm() { }
    int pf;
}
