test/fail_compilation/test314c.d
module test314c;

import imports.test314c;

void bar()
{
    foo();
}
